examples/test/testpolicy14411.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14411
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key41: value43
      key30: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value31
      podSelector:
        matchLabels:
          key16: value40
          key23: value6
          key39: value15
